--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,6 +11,14 @@
         <servlet-name>AssortmentServlet</servlet-name>
         <url-pattern>/assortment</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>SeriaServlet</servlet-name>
+        <servlet-class>mypackage.SeriaServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SeriaServlet</servlet-name>
+        <url-pattern>/seria</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.jpg</url-pattern>
