--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,14 @@
         <servlet-name>WorksServlet</servlet-name>
         <url-pattern>/works</url-pattern>
     </servlet-mapping>
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>mypackage.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.jpg</url-pattern>
